--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "gatsby-starter-hello-world",
-  "private": true,
-  "description": "A simplified bare-bones starter for Gatsby",
+  "name": "gatsby-starter-yaml-i18n",
+  "description": "A simplified bare-bones starter for Gatsby with YAML i18n",
   "version": "0.1.0",
   "license": "MIT",
   "scripts": {
@@ -15,6 +14,8 @@
   },
   "dependencies": {
     "gatsby": "^2.20.12",
+    "gatsby-plugin-mdx": "^1.1.9",
+    "gatsby-source-filesystem": "^2.2.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
@@ -23,7 +24,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-hello-world"
+    "url": "https://github.com/hitchcott/gatsby-starter-yaml-i18n"
   },
   "bugs": {
     "url": "https://github.com/gatsbyjs/gatsby/issues"
