--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "gatsby": "^2.20.12",
     "gatsby-plugin-mdx": "^1.1.9",
+    "gatsby-plugin-yaml-i18n": "^0.1.0",
     "gatsby-source-filesystem": "^2.2.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
