Updated demo to with plugin v0.1.5

--- a/content/ui.global.en.yaml
+++ b/content/ui.global.en.yaml
@@ -1,6 +1,6 @@
-title: English i18n
+title: Hello There.
 hello: world
-footer: Made with `<3` by CTH
+footer: I am a footer
 flags:
   en: 🇬🇧
   de: 🇩🇪
